--- a/anything.css
+++ b/anything.css
@@ -1,7 +1,7 @@
 body {
-    background-color: #020238;
-    color: #fff;
-    font-family: 'Sevillana', cursive;
+    background-color: #000000;
+    color: #3500D3;
+    font-family: 'Playfair Display', serif;
     font-size: 2rem;
 }
 
@@ -11,7 +11,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: 'Sevillana', cursive;
+    font-family: 'Playfair Display', serif;
     text-align: center;
 }
 
