--- a/anything.css
+++ b/anything.css
@@ -1,6 +1,6 @@
 body {
     background-color: #000000;
-    color: #0e6b0e;
+    color: #00ff00;
     font-family: 'Playfair Display', serif;
     font-size: 2rem;
 }
@@ -36,6 +36,7 @@ p{
 /* Navigation Bar */
 
 .navbar {
+    color: #00ff00;
     font-family: 'Playfair Display', serif;
     padding: 4.5rem;
 }
